2015-10-17  David Kepplinger <david.kepplinger@gmail.com>

    * Release version 0.6.1
    * Make plot.complmrob compatible with new ggplot2 version (>1.1.0)

2014-12-09  David Kepplinger <david.kepplinger@gmail.com>

    * Release version 0.5.8
    * Fix bug in isoLRinv when the original space was 2-dimensional
    * Update examples

2014-12-03  David Kepplinger <david.kepplinger@gmail.com>

    * Release version 0.5.6
    * Check on which platform we are and only spawn fork processes for bootstrapping on UNIX.

2014-08-16  David Kepplinger <david.kepplinger@gmail.com>

    * Release version 0.5.5
    * In older R versions use lm.wfit instead of .lm.fit

2014-08-13  David Kepplinger <david.kepplinger@gmail.com>

    * Release 0.5.4
    * Initial release