@@ -1,16 +1,16 @@
-02503bf5fed9dce3a7bcafbbfe5ae55e *ChangeLog
-4e94589b9baf4c139e2534c3d6db1622 *DESCRIPTION
+3de867b02ac828c77ce50425e87cf18c *ChangeLog
+6d249c18be1ef9aba318e202757aa74f *DESCRIPTION
 be408b204b5edd3f2c1ac7705b1bcb20 *NAMESPACE
-bb37a76c12a811c32af94e07b8ee5d88 *R/bootcoefs-methods.R
-1b1780e243801eeabbe82c1279541c9a *R/bootstrap-methods.R
+4fe96e173edfec5c799a5eeb106d9735 *R/bootcoefs-methods.R
+712fc2dcc0e987d0a5a3478202e21e9f *R/bootstrap-methods.R
 ad3001511130f0a1f69019b09eb47c8f *R/complmrob.R
 444435714705760e2e6ce84294b121bf *R/confint-methods.R
 b1e8683a39c1a5665038d28da6a3cfb6 *R/isomLR.R
 738902a4a170d089183e62d3e74275ae *R/plot-methods.R
 85c9a4dedaacc16cdb6476c6594a132c *R/print-methods.R
 37811956e347515bbecb116662f56540 *R/summary-methods.R
-e3d88f3fdf3dee02863ffb149391bf21 *man/bootStat-methods.Rd
-8868dd814ce5fefc75184fe5c4cc87b1 *man/bootcoefs.Rd
+29c962915961bff85a0f383fcf89ff74 *man/bootStat-methods.Rd
+1365a07465247d08a414183b3ca36d75 *man/bootcoefs.Rd
 f2c080c4752fd48260862d03dded7120 *man/complmrob.Rd
 bd9e5c543b0053bf620e0693c38025d1 *man/confint.Rd
 6392764ac81ebb5885f8d57292cabbc2 *man/format.perc.Rd
